Implement model deserialization from YAML file